[package]
name = "fetch"
version = "0.1.0"
authors = ["Yuji Sugiura <y.sugiura.0316@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "1.0.3"
async-std = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
