[package]
name = "http1_1"
version = "0.1.0"
authors = ["Yuji Sugiura <y.sugiura.0316@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
